--- a/imports/ui/interface.html
+++ b/imports/ui/interface.html
@@ -3,35 +3,47 @@
     <h1 class="page-header">Manage Interfaces</h1>
 
 
+    <div class="row">
+      <div class="col-md-8">
+        <form class="form-horizontal">
+          <div class="form-group">
+              <label for="inputIN3" class="col-sm-2 control-label">Interface Name</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputIN3" placeholder="Interface Name">
+              </div>
+          </div>
+          <div class="form-group">
+              <label for="inputFD3" class="col-sm-2 control-label">FD Number</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputFD3" placeholder="Interface Name">
+              </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+              <div class="checkbox">
+                <label class="checkbox-inline">
+                  <input type="checkbox" id="inlineCheckbox1" value="option1"> Email
+                </label>
+                <label class="checkbox-inline">
+                  <input type="checkbox" id="inlineCheckbox2" value="option2"> Facebook Messanger
+                </label>
+                <label class="checkbox-inline">
+                  <input type="checkbox" id="inlineCheckbox3" value="option3"> SMS
+                </label>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+              <button type="submit" class="btn btn-default">Save</button>
+            </div>
+          </div>
+        </form>
+      </div>
 
-    <form class="form-horizontal">
-      <div class="form-group">
-          <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-          <div class="col-sm-10">
-            <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-          </div>
-      </div>
-      <div class="form-group">
-        <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-        <div class="col-sm-10">
-            <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-          <div class="checkbox">
-            <label>
-              <input type="checkbox"> Remember me
-            </label>
-          </div>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-          <button type="submit" class="btn btn-default">Sign in</button>
-        </div>
-      </div>
-  </form>
+      <div class="col-md-4"></div>
+    </div>
+
 
 
   </div>
