added db lookup

--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -26,8 +26,9 @@
           <li><a href="#">Manage Interfaces</a></li>
         </ul>
       </div>
-     {{! {{> dashboard}} }}
-     {{> interface}}
+     {{! {{> interface}}  }}
+     {{> dashboard}}
+
     </div>
   </div>
 
