--- a/imports/ui/dashboard.html
+++ b/imports/ui/dashboard.html
@@ -38,20 +38,17 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td>1,001</td>
-            <td>Lorem</td>
-            <td>ipsum</td>
-            <td>dolor</td>
-            <td>sit</td>
-          </tr>
-          <tr>
-            <td>1,002</td>
-            <td>amet</td>
-            <td>consectetur</td>
-            <td>adipiscing</td>
-            <td>elit</td>
-          </tr>
+          {{#each interfaces}}
+            <tr>
+              <td>{{text}}</td>
+              <td>Lorem</td>
+              <td>ipsum</td>
+              <td>dolor</td>
+              <td>sit</td>
+            </tr>
+
+          {{/each}}
+
         </tbody>
       </table>
     </div>
