--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -22,12 +22,12 @@
     <div class="row">
       <div class="col-sm-3 col-md-2 sidebar">
         <ul class="nav nav-sidebar">
-          <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
+          <li class="active"><a href="#">Dashboard <span class="sr-only">(current)</span></a></li>
           <li><a href="#">Manage Interfaces</a></li>
         </ul>
       </div>
-     {{! {{> interface}}  }}
-     {{> dashboard}}
+     {{> interface}}
+     {{! {{> dashboard}}  }}
 
     </div>
   </div>
