--- a/imports/ui/interface.html
+++ b/imports/ui/interface.html
@@ -1,34 +1,34 @@
 <template name="interface">
   <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-    <h1 class="page-header">Manage Interfaces</h1>
+    <h1 class="page-header">Add Interface</h1>
 
 
     <div class="row">
       <div class="col-md-8">
-        <form class="form-horizontal">
+        <form class="form-horizontal new-interface">
           <div class="form-group">
               <label for="inputIN3" class="col-sm-2 control-label">Interface Name</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputIN3" placeholder="Interface Name">
+                <input name="interfaceName" type="text" class="form-control" id="inputIN3" placeholder="Interface Name">
               </div>
           </div>
           <div class="form-group">
               <label for="inputFD3" class="col-sm-2 control-label">FD Number</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputFD3" placeholder="Interface Name">
+                <input name="fDNumber" type="text" class="form-control" id="inputFD3" placeholder="Interface Name">
               </div>
           </div>
           <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
               <div class="checkbox">
                 <label class="checkbox-inline">
-                  <input type="checkbox" id="inlineCheckbox1" value="option1"> Email
+                  <input name="email" type="checkbox" id="inlineCheckbox1" value="option1"> Email
                 </label>
                 <label class="checkbox-inline">
-                  <input type="checkbox" id="inlineCheckbox2" value="option2"> Facebook Messanger
+                  <input name="facebook" type="checkbox" id="inlineCheckbox2" value="option2"> Facebook Messanger
                 </label>
                 <label class="checkbox-inline">
-                  <input type="checkbox" id="inlineCheckbox3" value="option3"> SMS
+                  <input name="sms" type="checkbox" id="inlineCheckbox3" value="option3"> SMS
                 </label>
               </div>
             </div>
@@ -42,6 +42,35 @@
       </div>
 
       <div class="col-md-4"></div>
+    </div>
+
+
+    <h2 class="sub-header">Interface Subscriptions</h2>
+    <div class="table-responsive">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>Interface Name</th>
+            <th>FD Number</th>
+            <th></th>
+            <th></th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          {{#each interfaces}}
+            <tr>
+              <td>{{interfaceName}}</td>
+              <td>{{fDNumber}}</td>
+              <td></td>
+              <td></td>
+              <td><button type="button" class="btn btn-danger delete-interface">Delete</button></td>
+            </tr>
+
+          {{/each}}
+
+        </tbody>
+      </table>
     </div>
 
 
