--- a/client/main.html
+++ b/client/main.html
@@ -7,5 +7,5 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Elm</title>
+    <title>elm</title>
 </head>
