--- a/imports/ui/interface.html
+++ b/imports/ui/interface.html
@@ -15,7 +15,7 @@
           <div class="form-group">
               <label for="inputFD3" class="col-sm-2 control-label">FD Number</label>
               <div class="col-sm-10">
-                <input name="fDNumber" type="text" class="form-control" id="inputFD3" placeholder="Interface Name">
+                <input name="fDNumber" type="text" class="form-control" id="inputFD3" placeholder="FD Number">
               </div>
           </div>
           <div class="form-group">
