--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -22,14 +22,11 @@
     <div class="row">
       <div class="col-sm-3 col-md-2 sidebar">
         <ul class="nav nav-sidebar">
-          <li class="active"><a href="#">Dashboard <span class="sr-only">(current)</span></a></li>
-          <li><a href="#">Manage Interfaces</a></li>
+          <li class="{{#if currentRouteIs 'Dashboard'}}active{{/if}}"><a href="./Dashboard">Dashboard <span class="sr-only">(current)</span></a></li>
+          <li class="{{#if currentRouteIs 'ManageInterfaces'}}active{{/if}}"><a href="./ManageInterfaces">Manage Interfaces</a></li>
         </ul>
       </div>
-     {{> interface}}
-     {{! {{> dashboard}}  }}
-
-    </div>
+     </div>
   </div>
 
 </body>
