--- a/client/main.html
+++ b/client/main.html
@@ -7,5 +7,8 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
     <title>elm</title>
 </head>
