removed data pass

--- a/imports/ui/manageInterfaces.html
+++ b/imports/ui/manageInterfaces.html
@@ -1,11 +1,11 @@
-<template name="interface">
+<template name="manageInterfaces">
   <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
     <h1 class="page-header">Add Interface</h1>
 
 
     <div class="row">
       <div class="col-md-8">
-        <form class="form-horizontal new-interface">
+        <form class="form-horizontal add-interface">
           <div class="form-group">
               <label for="inputIN3" class="col-sm-2 control-label">Interface Name</label>
               <div class="col-sm-10">
@@ -55,6 +55,7 @@
             <th class="center-align-text">Email</th>
             <th class="center-align-text">Facebook</th>
             <th class="center-align-text">SMS</th>
+            <th class="center-align-text"></th>
           </tr>
         </thead>
         <tbody>
