--- a/imports/ui/dashboard.html
+++ b/imports/ui/dashboard.html
@@ -38,16 +38,13 @@
           </tr>
         </thead>
         <tbody>
-          {{#each interfaces}}
             <tr>
-              <td>{{text}}</td>
+              <td>text</td>
               <td>Lorem</td>
               <td>ipsum</td>
               <td>dolor</td>
               <td>sit</td>
             </tr>
-
-          {{/each}}
 
         </tbody>
       </table>
