make generic work

--- a/imports/ui/interface.html
+++ b/imports/ui/interface.html
@@ -1,7 +1,7 @@
 <template name="interface">
   <tr>
     <td>{{interfaceName}}</td>
-    <td>{{fDNumber}}</td>
+    <td>{{fID}}</td>
     <td class="center-align-text">
       {{#if email}}
         <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
