--- a/imports/ui/manageInterfaces.html
+++ b/imports/ui/manageInterfaces.html
@@ -7,19 +7,19 @@
       <div class="col-md-8">
         <form class="form-horizontal add-interface">
           <div class="form-group">
-              <label for="inputIN3" class="col-sm-2 control-label">Interface Name</label>
-              <div class="col-sm-10">
+              <label for="inputIN3" class="col-sm-3 control-label">Interface Name</label>
+              <div class="col-sm-9">
                 <input name="interfaceName" type="text" class="form-control" id="inputIN3" placeholder="Interface Name">
               </div>
           </div>
           <div class="form-group">
-              <label for="inputFD3" class="col-sm-2 control-label">FD Number</label>
-              <div class="col-sm-10">
-                <input name="fDNumber" type="text" class="form-control" id="inputFD3" placeholder="FD Number">
+              <label for="inputFD3" class="col-sm-3 control-label">Flow Identifier</label>
+              <div class="col-sm-9">
+                <input name="fID" type="text" class="form-control" id="inputFD3" placeholder="Flow Identifier">
               </div>
           </div>
           <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
+            <div class="col-sm-offset-3 col-sm-9">
               <div class="checkbox">
                 <label class="checkbox-inline">
                   <input name="email" type="checkbox"> Email
@@ -51,7 +51,7 @@
         <thead>
           <tr>
             <th>Interface Name</th>
-            <th>FD Number</th>
+            <th>Flow Identifier</th>
             <th class="center-align-text">Email</th>
             <th class="center-align-text">Facebook</th>
             <th class="center-align-text">SMS</th>
