--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -12,7 +12,7 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">About</a></li>
+          <li><a href="#">{{> loginButtons align="right"}}</a></li>
         </ul>
       </div>
     </div>
