--- a/imports/ui/manageProfile/manageProfile.html
+++ b/imports/ui/manageProfile/manageProfile.html
@@ -2,26 +2,66 @@
   <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
     <h1 class="page-header">Manage Profile</h1>
 
+    	<div class="row">
 
-    <div class="row">
-      <div class="col-md-8">
-        <form class="form-horizontal update-user">
-          <div class="form-group">
-              <label for="inputIN3" class="col-sm-3 control-label">First Name</label>
-              <div class="col-sm-9">
-                <input name="firstName" type="text" class="form-control" id="inputIN3" value="{{currentUser.name.firstName}}">
+          <!-- edit form column -->
+          <div class="col-md-9 personal-info">
+            <h3>Personal info</h3>
+
+            <form class="form-horizontal" role="form">
+              <div class="form-group">
+                <label class="col-lg-3 control-label">First name:</label>
+                <div class="col-lg-8">
+                  <input class="form-control" type="text" value="Jane">
+                </div>
               </div>
+              <div class="form-group">
+                <label class="col-lg-3 control-label">Last name:</label>
+                <div class="col-lg-8">
+                  <input class="form-control" type="text" value="Bishop">
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-lg-3 control-label">Company:</label>
+                <div class="col-lg-8">
+                  <input class="form-control" type="text" value="">
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-lg-3 control-label">Email:</label>
+                <div class="col-lg-8">
+                  <input class="form-control" type="text" value="janesemail@gmail.com">
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-md-3 control-label">Username:</label>
+                <div class="col-md-8">
+                  <input class="form-control" type="text" value="janeuser">
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-md-3 control-label">Password:</label>
+                <div class="col-md-8">
+                  <input class="form-control" type="password" value="11111122333">
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-md-3 control-label">Confirm password:</label>
+                <div class="col-md-8">
+                  <input class="form-control" type="password" value="11111122333">
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-md-3 control-label"></label>
+                <div class="col-md-8">
+                  <input type="button" class="btn btn-primary" value="Save Changes">
+                  <span></span>
+                  <input type="reset" class="btn btn-default" value="Cancel">
+                </div>
+              </div>
+            </form>
           </div>
-          <div class="form-group">
-            <div class="col-sm-offset-3 col-sm-9">
-              <button type="submit" class="btn btn-default">Update</button>
-            </div>
-          </div>
-        </form>
       </div>
-
-      <div class="col-md-4"></div>
     </div>
 
-  </div>
 </template>
