--- a/imports/ui/welcome.html
+++ b/imports/ui/welcome.html
@@ -2,7 +2,11 @@
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
     <h1 class="page-header">Welcome to the Message Broker Live Alerting Tool</h1>
     <p>
-      <strong>Please login to access your alerts</strong>
+      {{#if currentUser}}
+      
+      {{else}}
+        <strong>Please login to access your alerts</strong>
+      {{/if}}
     </p>
   </div>
 </template>
