added alerting fields

--- a/imports/ui/manageProfile/manageProfile.html
+++ b/imports/ui/manageProfile/manageProfile.html
@@ -22,7 +22,7 @@
                 </div>
               </div>
               <div class="form-group">
-                <label class="col-lg-3 control-label">Company:</label>
+                <label class="col-lg-3 control-label">Facebook UserId:</label>
                 <div class="col-lg-8">
                   <input class="form-control" type="text" value="">
                 </div>
@@ -31,6 +31,12 @@
                 <label class="col-lg-3 control-label">Email:</label>
                 <div class="col-lg-8">
                   <input class="form-control" type="text" value="janesemail@gmail.com">
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-lg-3 control-label">Phone Number:</label>
+                <div class="col-lg-8">
+                  <input class="form-control" type="text" value="">
                 </div>
               </div>
               <div class="form-group">
