--- a/imports/ui/manageProfile/manageProfile.html
+++ b/imports/ui/manageProfile/manageProfile.html
@@ -8,59 +8,59 @@
           <div class="col-md-9 personal-info">
             <h3>Personal info</h3>
 
-            <form class="form-horizontal" role="form">
+            <form class="form-horizontal add-profile" role="form">
               <div class="form-group">
                 <label class="col-lg-3 control-label">First name:</label>
                 <div class="col-lg-8">
-                  <input class="form-control" type="text" value="Jane">
+                  <input class="form-control" type="text" name="firstName" value="{{profile.firstName}}">
                 </div>
               </div>
               <div class="form-group">
                 <label class="col-lg-3 control-label">Last name:</label>
                 <div class="col-lg-8">
-                  <input class="form-control" type="text" value="Bishop">
+                  <input class="form-control" type="text" name="lastName" value="{{profile.lastName}}">
                 </div>
               </div>
               <div class="form-group">
                 <label class="col-lg-3 control-label">Facebook UserId:</label>
                 <div class="col-lg-8">
-                  <input class="form-control" type="text" value="">
+                  <input class="form-control" type="text" name="fBookId" value="{{profile.fBookId}}">
                 </div>
               </div>
               <div class="form-group">
                 <label class="col-lg-3 control-label">Email:</label>
                 <div class="col-lg-8">
-                  <input class="form-control" type="text" value="janesemail@gmail.com">
+                  <input class="form-control" type="text" name="email" value="{{profile.email}}">
                 </div>
               </div>
               <div class="form-group">
                 <label class="col-lg-3 control-label">Phone Number:</label>
                 <div class="col-lg-8">
-                  <input class="form-control" type="text" value="">
+                  <input class="form-control" type="text" name="phoneNumber" value="{{profile.phoneNumber}}">
                 </div>
               </div>
               <div class="form-group">
                 <label class="col-md-3 control-label">Username:</label>
                 <div class="col-md-8">
-                  <input class="form-control" type="text" value="janeuser">
+                  <input class="form-control" type="text" name="" value="janeuser">
                 </div>
               </div>
               <div class="form-group">
                 <label class="col-md-3 control-label">Password:</label>
                 <div class="col-md-8">
-                  <input class="form-control" type="password" value="11111122333">
+                  <input class="form-control" type="password" name="" value="11111122333">
                 </div>
               </div>
               <div class="form-group">
                 <label class="col-md-3 control-label">Confirm password:</label>
                 <div class="col-md-8">
-                  <input class="form-control" type="password" value="11111122333">
+                  <input class="form-control" type="password" name="" value="11111122333">
                 </div>
               </div>
               <div class="form-group">
                 <label class="col-md-3 control-label"></label>
                 <div class="col-md-8">
-                  <input type="button" class="btn btn-primary" value="Save Changes">
+                  <input type="submit" class="btn btn-primary" value="Save Changes">
                   <span></span>
                   <input type="reset" class="btn btn-default" value="Cancel">
                 </div>
