--- a/imports/ui/manageProfile/manageProfile.html
+++ b/imports/ui/manageProfile/manageProfile.html
@@ -10,6 +10,12 @@
 
             <form class="form-horizontal add-profile" role="form">
               <div class="form-group">
+                <label class="col-md-3 control-label">Username:</label>
+                <div class="col-md-8">
+                  <input class="form-control" type="text" name="username" value="{{currentUser.username}}">
+                </div>
+              </div>
+              <div class="form-group">
                 <label class="col-lg-3 control-label">First name:</label>
                 <div class="col-lg-8">
                   <input class="form-control" type="text" name="firstName" value="{{profile.firstName}}">
@@ -37,24 +43,6 @@
                 <label class="col-lg-3 control-label">Phone Number:</label>
                 <div class="col-lg-8">
                   <input class="form-control" type="text" name="phoneNumber" value="{{profile.phoneNumber}}">
-                </div>
-              </div>
-              <div class="form-group">
-                <label class="col-md-3 control-label">Username:</label>
-                <div class="col-md-8">
-                  <input class="form-control" type="text" name="" value="janeuser">
-                </div>
-              </div>
-              <div class="form-group">
-                <label class="col-md-3 control-label">Password:</label>
-                <div class="col-md-8">
-                  <input class="form-control" type="password" name="" value="11111122333">
-                </div>
-              </div>
-              <div class="form-group">
-                <label class="col-md-3 control-label">Confirm password:</label>
-                <div class="col-md-8">
-                  <input class="form-control" type="password" name="" value="11111122333">
                 </div>
               </div>
               <div class="form-group">
