--- a/imports/ui/dashboard/dashboard.html
+++ b/imports/ui/dashboard/dashboard.html
@@ -1,31 +1,34 @@
 <template name="dashboard">
   <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-    <h1 class="page-header">Live Events</h1>
+    <h1 class="page-header">Event Totals</h1>
 
-    <div class="row placeholders">
-      <div class="col-xs-6 col-sm-3 placeholder">
-        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
-        <h4>Label</h4>
-        <span class="text-muted">Something else</span>
-      </div>
-      <div class="col-xs-6 col-sm-3 placeholder">
-        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
-        <h4>Label</h4>
-        <span class="text-muted">Something else</span>
-      </div>
-      <div class="col-xs-6 col-sm-3 placeholder">
-        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
-        <h4>Label</h4>
-        <span class="text-muted">Something else</span>
-      </div>
-      <div class="col-xs-6 col-sm-3 placeholder">
-        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
-        <h4>Label</h4>
-        <span class="text-muted">Something else</span>
-      </div>
-    </div>
+    <div class="row counter">
+           <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                   <p class="counter-count">{{alert_count_today}}</p>
+                   <h2>Day</h2>
+                   <span class="text-muted">Errors</span>
+           </div>
 
-    <h2 class="sub-header">Event History</h2>
+           <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                   <p class="counter-count">0</p>
+                   <h2>Day</h2>
+                   <span class="text-muted">Interfaces</span>
+           </div>
+
+           <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                   <p class="counter-count">{{alert_count_week}}</p>
+                   <h2>Week</h2>
+                   <span class="text-muted">Errors</span>
+           </div>
+
+           <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                   <p class="counter-count">{{alert_count_month}}</p>
+                   <h2>Month</h2>
+                   <span class="text-muted">Errors</span>
+           </div>
+       </div>
+
+    <h2 class="sub-header">Live Event History</h2>
     <div class="table-responsive">
       <table class="table table-striped">
         <thead>
