--- a/imports/ui/dashboard/dashboard.html
+++ b/imports/ui/dashboard/dashboard.html
@@ -33,25 +33,32 @@
       <table class="table table-striped">
         <thead>
           <tr>
-            <th>#</th>
-            <th>Header</th>
-            <th>Header</th>
-            <th>Header</th>
-            <th>Header</th>
+            <th>Flow Identifier</th>
+            <th>Transaction ID</th>
+            <th>Error Code</th>
+            <th>Error Time</th>
           </tr>
         </thead>
         <tbody>
-            <tr>
-              <td>text</td>
-              <td>Lorem</td>
-              <td>ipsum</td>
-              <td>dolor</td>
-              <td>sit</td>
-            </tr>
+          {{#each alerts}}
+
+          <tr>
+            {{> alert}}
+          </tr>
+
+          {{/each}}
+
 
         </tbody>
       </table>
     </div>
   </div>
 
+</template>
+
+<template name="alert">
+  <td>{{flowIdentifier}}</td>
+  <td>{{transactionId}}</td>
+  <td>{{errorCode}}</td>
+  <td>{{formatDate createdAt}}</td>
 </template>
