--- a/imports/ui/dashboard/dashboard.html
+++ b/imports/ui/dashboard/dashboard.html
@@ -33,6 +33,7 @@
       <table class="table table-striped">
         <thead>
           <tr>
+            <th>Interface Name</th>
             <th>Flow Identifier</th>
             <th>Transaction ID</th>
             <th>Error Code</th>
@@ -43,7 +44,11 @@
           {{#each alerts}}
 
           <tr>
-            {{> alert}}
+            <td>{{interfaceName flowIdentifier}}</td>
+            <td>{{flowIdentifier}}</td>
+            <td>{{transactionId}}</td>
+            <td><a href="#" data-toggle="modal" data-target="#modalErrorData" class="errorLookup">{{errorCode}}</a></td>
+            <td>{{formatDate createdAt}}</td>
           </tr>
 
           {{/each}}
@@ -54,11 +59,22 @@
     </div>
   </div>
 
-</template>
+  <div id="modalErrorData" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title" style="text-align-last: center">Error Detail</h4>
+            </div>
+            <div class="modal-body">
+              <pre></pre>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
 
-<template name="alert">
-  <td>{{flowIdentifier}}</td>
-  <td>{{transactionId}}</td>
-  <td>{{errorCode}}</td>
-  <td>{{formatDate createdAt}}</td>
 </template>
