Fix for hourly error counter

--- a/imports/ui/dashboard/dashboard.html
+++ b/imports/ui/dashboard/dashboard.html
@@ -4,27 +4,23 @@
 
     <div class="row counter">
            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                   <p class="counter-count">{{alert_count_today}}</p>
-                   <h2>Day</h2>
-                   <span class="text-muted">Errors</span>
+                   <p class="counter-count">{{alert_count_hour}}</p>
+                   <h2>Hour</h2>
            </div>
 
            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                   <p class="counter-count">0</p>
+                   <p class="counter-count">{{alert_count_today}}</p>
                    <h2>Day</h2>
-                   <span class="text-muted">Interfaces</span>
            </div>
 
            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                    <p class="counter-count">{{alert_count_week}}</p>
                    <h2>Week</h2>
-                   <span class="text-muted">Errors</span>
            </div>
 
            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                    <p class="counter-count">{{alert_count_month}}</p>
                    <h2>Month</h2>
-                   <span class="text-muted">Errors</span>
            </div>
        </div>
 
