--- a/imports/ui/manageInterfaces/manageInterfaces.html
+++ b/imports/ui/manageInterfaces/manageInterfaces.html
@@ -15,7 +15,7 @@
           <div class="form-group">
               <label for="inputFD3" class="col-sm-3 control-label">Flow Identifier</label>
               <div class="col-sm-9">
-                <input name="fID" type="text" class="form-control" id="inputFD3" placeholder="Flow Identifier">
+                <input name="flowIdentifier" type="text" class="form-control" id="inputFD3" placeholder="Flow Identifier">
               </div>
           </div>
           <div class="form-group">
