--- a/imports/ui/manageProfile/manageProfile.html
+++ b/imports/ui/manageProfile/manageProfile.html
@@ -27,6 +27,8 @@
                   <input class="form-control" type="text" name="lastName" value="{{profile.lastName}}">
                 </div>
               </div>
+              <h3>Contact details</h3>
+              <hr>
               <div class="form-group">
                 <label class="col-lg-3 control-label">Facebook UserId:</label>
                 <div class="col-lg-8">
@@ -40,9 +42,21 @@
                 </div>
               </div>
               <div class="form-group">
-                <label class="col-lg-3 control-label">Phone Number:</label>
+                <label class="col-lg-3 control-label">Mobile Number:</label>
                 <div class="col-lg-8">
                   <input class="form-control" type="text" name="phoneNumber" value="{{profile.phoneNumber}}">
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-lg-3 control-label">Twillo Account ID:</label>
+                <div class="col-lg-8">
+                  <input class="form-control" type="text" name="twilloAccountID" value="{{profile.twilloAccountID}}">
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-lg-3 control-label">Twillo Auth Token:</label>
+                <div class="col-lg-8">
+                  <input class="form-control" type="text" name="twilloAuthToken" value="{{profile.twilloAuthToken}}">
                 </div>
               </div>
               <div class="form-group">
