--- a/imports/ui/manageInterfaces/interface.html
+++ b/imports/ui/manageInterfaces/interface.html
@@ -1,22 +1,22 @@
 <template name="interface">
-  <tr>
-    <td>{{interfaceName}}</td>
-    <td>{{flowIdentifier}}</td>
-    <td class="center-align-text">
+  <tr class="{{selectedClass}}">
+    <td class="interface">{{interfaceName}}</td>
+    <td class="interface">{{flowIdentifier}}</td>
+    <td class="center-align-text interface">
       {{#if email}}
         <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
       {{else}}
         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
       {{/if}}
     </td>
-    <td class="center-align-text">
+    <td class="center-align-text interface">
       {{#if facebook}}
         <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
       {{else}}
         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
       {{/if}}
     </td>
-    <td class="center-align-text">
+    <td class="center-align-text interface">
       {{#if sms}}
         <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
       {{else}}
