--- a/imports/ui/manageInterfaces/manageInterfaces.html
+++ b/imports/ui/manageInterfaces/manageInterfaces.html
@@ -1,34 +1,39 @@
 <template name="manageInterfaces">
   <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+    {{#if selectedInterface}}
+    <h1 class="page-header">Update Interface</h1>
+  {{else}}
     <h1 class="page-header">Add Interface</h1>
+  {{/if}}
+
 
 
     <div class="row">
       <div class="col-md-8">
-        <form class="form-horizontal add-interface">
+        <form class="form-horizontal save-interface">
           <div class="form-group">
               <label for="inputIN3" class="col-sm-3 control-label">Interface Name</label>
               <div class="col-sm-9">
-                <input name="interfaceName" type="text" class="form-control" id="inputIN3" placeholder="Interface Name">
+                <input name="interfaceName" type="text" class="form-control" id="inputIN3" placeholder="Interface Name" value="{{selectedInterface.interfaceName}}">
               </div>
           </div>
           <div class="form-group">
               <label for="inputFD3" class="col-sm-3 control-label">Flow Identifier</label>
               <div class="col-sm-9">
-                <input name="flowIdentifier" type="text" class="form-control" id="inputFD3" placeholder="Flow Identifier">
+                <input name="flowIdentifier" type="text" class="form-control" id="inputFD3" placeholder="Flow Identifier" value="{{selectedInterface.flowIdentifier}}">
               </div>
           </div>
           <div class="form-group">
             <div class="col-sm-offset-3 col-sm-9">
               <div class="checkbox">
                 <label class="checkbox-inline">
-                  <input name="email" type="checkbox"> Email
+                  <input name="email" type="checkbox" checked="{{selectedInterface.email}}"> Email
                 </label>
                 <label class="checkbox-inline">
-                  <input name="facebook" type="checkbox"> Facebook Messanger
+                  <input name="facebook" type="checkbox" checked="{{selectedInterface.facebook}}"> Facebook Messanger
                 </label>
                 <label class="checkbox-inline">
-                  <input name="sms" type="checkbox"> SMS
+                  <input name="sms" type="checkbox" checked="{{selectedInterface.sms}}"> SMS
                 </label>
               </div>
             </div>
@@ -47,7 +52,7 @@
 
     <h2 class="sub-header">Interface Subscriptions</h2>
     <div class="table-responsive">
-      <table class="table table-striped">
+      <table class="table table-condensed">
         <thead>
           <tr>
             <th>Interface Name</th>
