--- a/imports/ui/welcome.html
+++ b/imports/ui/welcome.html
@@ -1,9 +1,10 @@
 <template name="welcome">
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-    <h1 class="page-header">Welcome to the Message Broker Live Alerting Tool</h1>
+    <h1 class="page-header">Welcome to ELM</h1>
+    <h2>A tool for enterprise middleware alerting</h2>
     <p>
       {{#if currentUser}}
-      
+
       {{else}}
         <strong>Please login to access your alerts</strong>
       {{/if}}
