--- a/imports/ui/manageInterfaces/interface.html
+++ b/imports/ui/manageInterfaces/interface.html
@@ -1,5 +1,5 @@
 <template name="interface">
-  <tr class="{{selectedClass}}">
+  <tr class="{{selectedInterfaceClass}}">
     <td class="interface">{{interfaceName}}</td>
     <td class="center-align-text interface">
       {{#if email}}
