Charts created but not reactive

--- a/imports/ui/dashboard/dashboard.html
+++ b/imports/ui/dashboard/dashboard.html
@@ -24,7 +24,12 @@
            </div>
        </div>
 
-    <h2 class="sub-header">Live Event History</h2>
+    <h2 class="sub-header">Event History</h2>
+    <div class="row">
+      {{> dashboardChart }}
+    </div>
+
+    <h2 class="sub-header">Live Event Log</h2>
     <div class="table-responsive">
       <table class="table table-striped">
         <thead>
