--- a/imports/ui/dashboard/dashboard.html
+++ b/imports/ui/dashboard/dashboard.html
@@ -29,6 +29,11 @@
       {{> dashboardChart }}
     </div>
 
+    <h2 class="sub-header">Error Component Types</h2>
+    <div class="row">
+      {{> dashboardPieChart }}
+    </div>
+
     <h2 class="sub-header">Live Event Log</h2>
     <div class="table-responsive">
       <table class="table table-striped">
